修改判断错误问题.