@@ -49,6 +49,7 @@ import java.lang.reflect.Method;
 import java.util.*;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
+import java.util.stream.Collectors;
 
 /**
  * 插件信息终端
@@ -424,13 +425,14 @@ public class PluginEndpoint {
 
         List<String> parentValueList = new LinkedList<>();
 
-
-        if (StringUtils.isBlank(parent.getValue())) {
+        if (StringUtils.isEmpty(StringUtils.trimToEmpty(parent.getValue()))) {
             if (Method.class.isAssignableFrom(target.getClass()) && StringUtils.isEmpty(parent.getValue())) {
                 Method method = Casts.cast(target);
                 RequestMapping requestMapping = AnnotationUtils.findAnnotation(method.getDeclaringClass(), RequestMapping.class);
                 if (Objects.nonNull(requestMapping)) {
-                    parentValueList = Arrays.stream(requestMapping.value()).map(s -> StringUtils.appendIfMissing(s, AntPathMatcher.DEFAULT_PATH_SEPARATOR)).toList();
+                    parentValueList = Arrays.stream(requestMapping.value()).map(s -> StringUtils.appendIfMissing(s, AntPathMatcher.DEFAULT_PATH_SEPARATOR)).collect(Collectors.toList());
+                } else {
+                    return StringUtils.appendIfMissing(targetValue, SpringMvcUtils.ANT_PATH_MATCH_ALL);
                 }
             } else {
                 return StringUtils.appendIfMissing(targetValue, SpringMvcUtils.ANT_PATH_MATCH_ALL);
